# emt

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs
benches/: event_benchmarks.rs  region_benchmarks.rs
docs/: CI.md  architecture.md  benchmarks.md  ebpf.md  limitations_and_future_work.md  ptrace.md  testing.md
examples/: bpf_event_test.rs  bpf_loader_test.rs  bpf_loader_test_2.rs  check_bpf_compile.rs  diagnostic.rs  example.rs  loader_analyzer_test.rs  memory_analyzer_test.rs  rwx_cycle_test.rs  rwx_monitor.rs  self_modifying_code.rs  target_test.rs  test_analyzer.rs  test_bpf_event.rs  test_bpf_event_2.rs  test_file_mapping.rs  test_memory_changes.rs  test_models.rs  test_race_condition.rs  test_race_condition_2.rs  tracer_test.rs  verify_memory_content.rs
src/: bpf_loader.rs  bpf_runtime.rs  ebpf.rs  error.rs  event_handler.rs  handler.rs  lib.rs  main.rs  memory_analyzer.rs  models.rs  rwx_monitor.rs  tracer.rs  utils.rs
src/bpf/: memory_tracer.bpf.c  memory_tracer_perf_event.bpf.c  memory_tracer_ringbuf.bpf.c  simple_tracer.bpf.c  vmlinux.h
src/ebpf/: bpf_runtime.rs  mod.rs  tracer.rs
src/ptrace/: controller.rs  mod.rs  monitor.rs  region.rs  remote_syscall.rs  rwx_monitor.rs  rwx_region.rs
tests/: eBPF_integration_test.rs  integration_test.rs  ptrace_integration_test.rs
tests/common/: mod.rs
