[package]
name = "emt"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
libc = "0.2.171"
libbpf-rs = "0.24.8"
log = "0.4.27"
thiserror = "2.0.12"

[dependencies.nix]
version = "0.30.1"
features = [
    "ptrace",
    "signal",
    "process",
    "user",
]

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "eBPF_integration_test"
path = "tests/eBPF_integration_test.rs"

[[test]]
name = "ptrace_integration_test"
path = "tests/ptrace_integration_test.rs"

[[bench]]
name = "region_benchmarks"
harness = false

[[bench]]
name = "event_benchmarks"
harness = false
